try to apply link fix

--- a/dishes/apple-and-pork.html
+++ b/dishes/apple-and-pork.html
@@ -17,7 +17,7 @@
     <main>
        
             <h1>The Viking Apple And Pork!</h1>
-            <img src="/images/apple-and-pork.png" alt="">
+            <img src="../images/apple-and-pork.png" alt="">
 
 
         
