--- a/dishes/fish-soup.html
+++ b/dishes/fish-soup.html
@@ -17,7 +17,7 @@
     <main>
        
             <h1>The Viking Fish Soup!</h1>
-            <img src="/images/fish-soup.png" alt="">
+            <img src="../images/fish-soup.png" alt="">
 
 
         
