--- a/dishes/green-patties.html
+++ b/dishes/green-patties.html
@@ -19,7 +19,7 @@
     <main>
        
             <h1>Green Patties!</h1>
-            <img src="/images/green-patties.png" alt="">
+            <img src="../images/green-patties.png" alt="">
 
 
         
