change format and attempt link fix again

--- a/dishes/apple-and-pork.html
+++ b/dishes/apple-and-pork.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     
-    <title>Document</title>
+    <title>Apple And Pork</title>
 </head>
 <body>
     <main>
