--- a/dishes/green-patties.html
+++ b/dishes/green-patties.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="recipestyle.css">
 
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
 
-    
-    <title>Document</title>
+    <title>Green Patties</title>
 </head>
 <body>
     <main>
